2004-11-08  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with automake-1.9.3.

2004-10-29  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with libtool-1.5.6 Debian: 220.

	* munge.spec: Added %config(noreplace) to init script.

2004-10-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Added support for /etc/sysconfig/munge.

	* : Re-bootstrap'd with automake-1.9.2.

	* munge.spec, src/etc/Makefile.am, src/etc/munge.init:
	  Removed dependence on /etc/rc.d/init.d directory.

2004-10-13  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/job.c: Added include for building on SuSE SLES-8.

	* README: Updated.

	* src/libcommon/munge_defs.h: Added MUNGE_MAXIMUM_REQ_LEN.
	* src/libcommon/munge_msg.c, src/libcommon/munge_msg.h:
	  Added maxlen parm to munge_msg_send() and munge_msg_recv().
	  All callers changed.
	* src/libmunge/msg_client.c(munge_msg_client_xfer):
	  Abort retry attempts on EMUNGE_BAD_LENGTH.
	* src/libmunge/munge.h, src/libmunge/strerror.c:
	  Added EMUNGE_BAD_LENGTH.  Renumbered munge_err enum.
	* src/munged/job.c(_job_exec): Limit msg len to MUNGE_MAXIMUM_REQ_LEN.

	* src/libcommon/munge_msg.h: Incremented MUNGE_MSG_VERSION to 3
	  since retry field was added to munge_msg_head struct.

2004-09-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Tweaked comments.

	* src/munged/job.c(job_accept): Changed log msg for processing backlog.

	* src/munged/dec_v1.c(dec_v1_validate_replay):
	  Added log msg when allowing credential replay due to retry.

	* src/libcommon/munge_defs.h:
	  Added MUNGE_SOCKET_XFER_USLEEP.  Removed MUNGE_SOCKET_ACCEPT_USLEEP.
	  Changed MUNGE_SOCKET_XFER_ATTEMPTS from 3 to 5.
	* src/libmunge/msg_client.c(munge_msg_client_xfer):
	  Added linear back-off to retry of failed credential transactions.
	* src/munged/job.c(job_accept):
	  Changed usleep() to work_wait() when accept() exceeds open fd limit.

2004-09-23  Chris Dunlap  <cdunlap@llnl.gov>
